limit show header width to prevent spillage

--- a/theme/assets/css/shows/_show-header.scss
+++ b/theme/assets/css/shows/_show-header.scss
@@ -81,6 +81,7 @@
         
         .show-subtitle  {
             padding-top: 1em;
+            max-width: 80%;
         }
 
         .showtime-summary {
